--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,24 @@ jobs:
 
       - name: Build
         run: npm run build --prod
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-20.04
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd /var/www/html
+            git pull
+            npm ci
+            npm run build --prod
+
+
