--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,14 @@ jobs:
         run: npm run build --prod
 
   deploy:
-    name:  Copy folder to server
+    name: Deploy
     runs-on: ubuntu-20.04
     needs: build
     steps:
+      - script: |
+          echo "Deploying to Server"
+          ls -la
+
       - uses: actions/checkout@v3
       - name: Deploy to server
         uses: appleboy/scp-action@master
