--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,11 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-20.04
-
     strategy:
       matrix:
         node-version: [16.10.0]
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -42,6 +39,11 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v3
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: dist
       - name: Deploy to server
         uses: appleboy/scp-action@master
         with:
