--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
       matrix:
         node-version: [16.10.0]
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -38,21 +39,22 @@ jobs:
     runs-on: ubuntu-20.04
     needs: build
     steps:
-      - uses: actions/checkout@v3
-      - name: Download Build Artifact
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Download build Artifact
         uses: actions/download-artifact@v3
         with:
-          name: build
-          path: dist
-      - name: Deploy to server
+          name: dist
+          path: ./dist
+      - name: copy dist folder to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          source: "dist/"
-          target: "/var/www/html/"
+          source: ./dist
+          target: /var/www/html/
 
 
 
