--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,13 @@ jobs:
       - name: Build
         run: npm run build --prod
 
+      - name: Archive build
+        if: success()
+        uses: actions/upload-artifact@v1
+        with:
+          name: dist
+          path: ./dist
+
   deploy:
     name: Deploy
     runs-on: ubuntu-20.04
@@ -46,7 +53,7 @@ jobs:
         with:
           name: dist
           path: ./dist
-      - name: copy dist folder to server
+      - name: Copy dist folder to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
