kilimofy as dest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           source: ./dist
-          target: /var/www/html/
+          target: /var/www/html/kilimofy/
 
 
 
