--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,11 @@ jobs:
           source: ./dist
           target: /var/www/html/kilimofy/
 
+      - name: Delete build Artifact
+        uses: actions/delete-artifact@v3
+        with:
+          name: dist
+
 
 
 
