--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Test
+        run: npm run test:prod
+
       - name: Build
         run: npm run build --prod
 
