--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Build
         run: npm run build --prod
 
-      - name: Test
-        run: npm run test:prod
+      # - name: Test
+      #   run: npm run test:prod
 
       - name: Archive build
         if: success()
