--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.10.0]
+        language: [typescript]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -19,7 +20,7 @@ jobs:
       - name: Code analysis
         uses: github/codeql-action/analyze@v2
         with:
-          languages: typescript
+          languages: ${{ matrix.language }}
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
